SERVER-32241 Make applyOps report failure when a nested applyOps fails.