jstests/replsets/drop_collections_two_phase_apply_ops_convert_to_capped.js
@@ -54,7 +54,7 @@
             'Attempting to convert collection using applyOps with system.drop namespace: ' +
             tojson(applyOpsCmdWithName));
         assert.commandFailedWithCode(primary.adminCommand(applyOpsCmdWithName),
-                                     ErrorCodes.UnknownError);
+                                     ErrorCodes.NamespaceNotFound);
         assert(twoPhaseDropTest.collectionIsPendingDrop(collName),
                'applyOps using collection name ' + dropPendingCollName +
                    ' affected drop-pending collection state unexpectedly');
@@ -73,7 +73,7 @@
             'Attempting to convert collection using applyOps with UUID: ' +
             tojson(applyOpsCmdWithUuid));
         assert.commandFailedWithCode(primary.adminCommand(applyOpsCmdWithUuid),
-                                     ErrorCodes.UnknownError);
+                                     ErrorCodes.NamespaceNotFound);
         dropPendingCollInfo = twoPhaseDropTest.collectionIsPendingDrop(collName);
         assert(dropPendingCollInfo,
                'applyOps using UUID ' + dropPendingCollUuid +
